cambios de formato

--- a/views/summarystatscont22.tex
+++ b/views/summarystatscont22.tex
@@ -1,6 +1,6 @@
 
 % Table created by stargazer v.5.2.3 by Marek Hlavac, Social Policy Institute. E-mail: marek.hlavac at gmail.com
-% Date and time: Sun, Mar 02, 2025 - 13:59:09
+% Date and time: Sun, Mar 02, 2025 - 16:21:38
 \begin{table}[!htbp] \centering 
   \caption{Summary Statistics - Continuous Variables} 
   \label{} 
@@ -16,5 +16,6 @@ exp\_log\_real\_income & 16,397 & 5,819.77 & 4,917.24 & 151.91 & 26,956.21 \\
 age & 16,397 & 39.63 & 13.39 & 19 & 94 \\ 
 Weekly\_Hours\_Worked & 16,397 & 47.21 & 14.91 & 1.00 & 84.00 \\ 
 \hline \\[-1.8ex] 
+\multicolumn{6}{l}{Note: This table presents the descriptivte statistics for the continuous variables used in this project.} \\ 
 \end{tabular} 
 \end{table} 
