--- a/views/regression_results41.tex
+++ b/views/regression_results41.tex
@@ -1,8 +1,8 @@
 
 % Table created by stargazer v.5.2.3 by Marek Hlavac, Social Policy Institute. E-mail: marek.hlavac at gmail.com
-% Date and time: Sun, Mar 02, 2025 - 14:01:00
+% Date and time: Sun, Mar 02, 2025 - 16:23:55
 \begin{table}[!htbp] \centering 
-  \caption{Regression Results: Wage Gap Models} 
+  \caption{Table 3. Regression Results: Wage Gap Models} 
   \label{} 
 \begin{tabular}{@{\extracolsep{5pt}}lccc} 
 \\[-1.8ex]\hline 
