--- a/views/summarystatscont22.tex
+++ b/views/summarystatscont22.tex
@@ -1,6 +1,6 @@
 
 % Table created by stargazer v.5.2.3 by Marek Hlavac, Social Policy Institute. E-mail: marek.hlavac at gmail.com
-% Date and time: Mon, Mar 03, 2025 - 14:40:38
+% Date and time: Mon, Mar 03, 2025 - 14:53:27
 \begin{table}[!htbp] \centering 
   \caption{Summary Statistics - Continuous Variables} 
   \label{} 
@@ -9,12 +9,12 @@
 \hline \\[-1.8ex] 
 Statistic & \multicolumn{1}{c}{N} & \multicolumn{1}{c}{Mean} & \multicolumn{1}{c}{St. Dev.} & \multicolumn{1}{c}{Min} & \multicolumn{1}{c}{Max} \\ 
 \hline \\[-1.8ex] 
-log\_nominal\_income & 16,397 & 8.57 & 0.55 & 5.79 & 10.32 \\ 
-log\_real\_income & 16,397 & 8.48 & 0.53 & 5.02 & 10.20 \\ 
-exp\_log\_nominal\_income & 16,397 & 6,437.12 & 5,528.65 & 326.67 & 30,303.02 \\ 
-exp\_log\_real\_income & 16,397 & 5,819.77 & 4,917.24 & 151.91 & 26,956.21 \\ 
-age & 16,397 & 39.63 & 13.39 & 19 & 94 \\ 
-Weekly\_Hours\_Worked & 16,397 & 47.21 & 14.91 & 1.00 & 84.00 \\ 
+Log. Nominal hourly wage & 16,397 & 8.57 & 0.55 & 5.79 & 10.32 \\ 
+Log. Real hourly wage & 16,397 & 8.48 & 0.53 & 5.02 & 10.20 \\ 
+Nominal hourly wage & 16,397 & 6,437.12 & 5,528.65 & 326.67 & 30,303.02 \\ 
+Real hourly wage & 16,397 & 5,819.77 & 4,917.24 & 151.91 & 26,956.21 \\ 
+Age & 16,397 & 39.63 & 13.39 & 19 & 94 \\ 
+Weekly work hours & 16,397 & 47.21 & 14.91 & 1.00 & 84.00 \\ 
 \hline \\[-1.8ex] 
 \multicolumn{6}{l}{Note: This table presents the descriptivte statistics for the continuous variables used in this project.} \\ 
 \end{tabular} 
